// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAddress should render disabled 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="absolute inset-0 flex items-center border border-transparent px-14 w-full"
      disabled=""
      type="button"
    >
      <div
        class="inline-flex items-center no-ligatures"
      />
    </button>
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
    >
      <div
        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
      />
      <div
        class="relative flex flex-1 invisible"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectAddress should render empty 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="absolute inset-0 flex items-center border border-transparent px-14 w-full"
      type="button"
    >
      <div
        class="inline-flex items-center no-ligatures"
      />
    </button>
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
    >
      <div
        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
      />
      <div
        class="relative flex flex-1 invisible"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectAddress should render invalid 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="absolute inset-0 flex items-center border border-transparent px-14 w-full"
      type="button"
    >
      <div
        class="inline-flex items-center no-ligatures"
      />
    </button>
    <div
      class="Input__InputWrapperStyled-wu99qs-0 kAqrUx"
    >
      <div
        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
      />
      <div
        class="relative flex flex-1 invisible"
      >
        <input
          aria-invalid="true"
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      >
        <span
          data-testid="Input-error"
        >
          <div
            class="sc-bdfBwQ iyevwF text-theme-danger-500"
            height="20"
            width="20"
          >
            <svg>
              alert-warning.svg
            </svg>
          </div>
        </span>
        <div
          class="pl-3"
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectAddress should render with preselected address 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="absolute inset-0 flex items-center border border-transparent px-14 w-full"
      type="button"
    >
      <div
        class="inline-flex items-center no-ligatures"
      >
        <span
          class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
          data-testid="address__wallet-address"
        >
          bP6T9GQ3kqP6T…TTTP6T9GQ3kqT
        </span>
      </div>
    </button>
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
    >
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full"
        >
          <img
            alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
            title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
          />
        </div>
      </div>
      <div
        class="relative flex flex-1 invisible"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectAddress should render with preselected verified address 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="absolute inset-0 flex items-center border border-transparent px-14 w-full"
      type="button"
    >
      <div
        class="inline-flex items-center no-ligatures"
      />
    </button>
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
    >
      <div
        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
      />
      <div
        class="relative flex flex-1 invisible"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="SelectAddress__input"
          readonly=""
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <div
          class=""
        >
          <div
            class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class="rounded-full text-theme-success-400 bg-theme-success-100"
            >
              <div
                class="sc-bdfBwQ iNulIV"
                height="18"
                width="18"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
            </div>
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                user.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
